[project]
name = "llm-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "aiosqlite>=0.21.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain-community>=0.3.27",
    "langchain[openai]>=0.3.26",
    "langgraph>=0.5.4",
    "pymilvus>=2.5.14",
    "requests>=2.32.4",
]

[tool.uv.workspace]
members = [
    "rag_use_milvus",
]
