[project]
name = "ai-companion-spirit"
version = "0.1.0"
description = "AI陪伴精灵服务 - 基于FastAPI+LangChain+LangGraph+Milvus"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.40",
    "pymilvus>=2.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.2.2",
    "tiktoken>=0.5.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "aiosqlite>=0.19.0",
    "memobase>=0.0.23",
]
